# cryptify

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  api-description.yaml  backend.Dockerfile  backend.dev.Dockerfile  build.rs  deploy.sh  dev.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  frontend.dev.Dockerfile  irmaserver.dev.Dockerfile  release-plz.toml  rust.dev.Dockerfile  shell.nix
.github/workflows/: build.yml  ci.yml  delivery.yml  pr-title.yml  release-plz.yml
conf/: config.dev.toml  config.toml  crontab  cryptify.nl.conf  cryptify.service  irma.example.json  nginx.conf  nginx.dev.conf  wasm-mime.types
cryptify/: .gitignore  CHANGELOG.md  Cargo.toml
cryptify-back-end/: .eslintrc.json  .gitignore  Cargo.toml  config.toml  package-lock.json  package.json  tsconfig.json
cryptify-back-end/src/: config.rs  controllers.ts  email.rs  environment.ts  error.rs  index.ts  main.rs  metadata.rs  store.rs  utilities.ts  validators.ts
cryptify-back-end/src/email/EN/: email.html  email.txt  subject.txt
cryptify-back-end/src/email/NL/: email.html  email.txt  subject.txt
cryptify-back-end/templates/email/: email.html
cryptify-back-end/tests/: index.ts  sealed.cryptify
cryptify-front-end/: .env  .gitignore  config-overrides.js  craco.config.js  package-lock.json  package.json  tsconfig.json
cryptify-front-end/public/: config.js  electron.js  index.html  manifest.json  mitm.html  sw.js
cryptify-front-end/src/: App.css  App.test.tsx  App.tsx  Constants.tsx  CryptFileInput.css  CryptFileInput.tsx  CryptFileList.css  CryptFileList.tsx  CryptProgress.css  CryptProgress.tsx  DecryptPanel.css  DecryptPanel.tsx  EncryptPanel.css  EncryptPanel.tsx  FileProvider.ts  InfoPanel.css  InfoPanel.tsx  IrmaErrMod.ts  Lang.tsx  ProgressReporter.ts  Translations.tsx  conflux.d.ts  index.tsx  utils.ts
cryptify/src/: config.rs  email.rs  main.rs  store.rs
cryptify/templates/email/: email.html  subject.txt
docs/grafana/: README.md  postguard-usage.json
src/: config.rs  email.rs  error.rs  main.rs  metrics.rs  store.rs
templates/email/: email.html  email.txt
