[package]
name = "cryptify"
version = "0.1.26"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2021"
repository = "https://github.com/encryption4all/cryptify"
license = "MIT"

description = "End-to-end encrypted file sharing service"

[dependencies]
askama = "0.16.0"
chrono = { version = "0.4.42", features = ["unstable-locales"] }
irma = "0.2.1"
lettre = "0.11.19"
log = "0.4.28"
qrcode = "0.14.1"
rand = "0.10.0"
reqwest = { version = "0.13.0", features = ["blocking", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
subtle = "2.6.1"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = "1.48.0"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.7"

tokio-util = { version = "0.7.17", features = ["compat"] }
pg-core = { version = "0.5.0", features = ["rust", "stream"] }
minreq = { version = "2.14.1", features = ["json-using-serde", "https-native"]}

[dev-dependencies]
# Enables `pg_core::test::TestSetup` for building real verifying keys and
# sealing fixtures in the integration test harness. No effect on release builds.
pg-core = { version = "0.5.0", features = ["rust", "stream", "test"] }
futures = "0.3"
# pg-core's Sealer/TestSetup use rand 0.8 APIs; the rest of the crate uses
# rand 0.9. Pin an 0.8 rand explicitly in dev-deps so test code can hand
# pg-core a compatible RNG without an 0.9↔0.8 trait mismatch.
rand08 = { package = "rand", version = "0.8" }

[profile.release]
lto = true

[profile.edge]
inherits = "release"
lto = false
