[package]
name = "cryptify"
version = "0.1.27"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2021"
repository = "https://github.com/encryption4all/cryptify"
license = "MIT"

description = "End-to-end encrypted file sharing service"

[dependencies]
askama = "0.16.0"
chrono = { version = "0.4.45", features = ["unstable-locales"] }
irma = "0.2.1"
lettre = "0.11.22"
log = "0.4.33"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
tokio = "1.52.3"
uuid = { version = "1.23.4", features = ["v4"] }
url = "2.5.8"

tokio-util = { version = "0.7.18", features = ["compat"] }
pg-core = { version = "0.6.1", features = ["rust", "stream"] }
minreq = { version = "3.0.0", features = ["json-using-serde", "https-native-tls"]}
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
# Enables `pg_core::test::TestSetup` for building real verifying keys and
# sealing fixtures in the integration test harness. No effect on release builds.
pg-core = { version = "0.6.1", features = ["rust", "stream", "test"] }
futures = "0.3"
# pg-core's Sealer/TestSetup use rand 0.8 APIs; the rest of the crate uses
# rand 0.9. Pin an 0.8 rand explicitly in dev-deps so test code can hand
# pg-core a compatible RNG without an 0.9↔0.8 trait mismatch.
rand08 = { package = "rand", version = "0.8" }

[profile.release]
lto = true

[profile.edge]
inherits = "release"
lto = false
