[package]
name = "cryptify-backend"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
lettre = "0.10.0-rc.3"
log = "0.4.14"
rand = "0.8.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
uuid = {version = "0.8.2", features = ["v4"] }
