[package]
name = "cryptify-backend"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
chrono = { version = "0.4.25", features = ["unstable-locales"] }
irma = "0.2.1"
lettre = "0.10.4"
log = "0.4.14"
qrcode = "0.12.0"
rand = "0.8.4"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0-alpha2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = "1.15.0"
uuid = { version = "1.3.3", features = ["v4"] }

tokio-util = { version = "0.7.4", features = ["compat"] }
pg-core = { version = "0.3.0-rc.0", features = ["rust", "stream"] }
