[package]
name = "cryptify"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.14.0"
chrono = { version = "0.4.42", features = ["unstable-locales"] }
irma = "0.2.1"
lettre = "0.11.19"
log = "0.4.28"
qrcode = "0.14.1"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.48.0"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.7"

tokio-util = { version = "0.7.17", features = ["compat"] }
pg-core = { version = "0.3.0-rc.0", features = ["rust", "stream"] }
minreq = { version = "2.14.1", features = ["json-using-serde", "https-native"]}
